120		C++			(Added Brandenburg-Prussia-Germany save)
121		C++			(Added Yoshi HT Input save)
122		C++			Fixed typo in country conversion list.
123		C++			Religions now converted.
124		C++			Only valid political parties are activated.
125		C++			Prestige!
126		C++			Kalelovil's updates to the DW province mappings.
127		C++			Many inventions start fired. Prestige ones will give prestige.
128		C++			Made Romanticism a later tech. Also fixed a minor industrial/culture inventions bug.
129		C++			Fixed 5.1 beta crash.
130		C++			Fixing my fix to the 5.1 beta crash.
131		C++			Improved logging of missing province mappings.
132		C++			Fixing the autosave bug. I think.
133		C++			Improved logging.
134		C++			Now pulls original pop info from V2 install. Used for uncontrolled provinces & pre-conversion population counts.
135		C++			Fixed bug where parser would still look for curly brackets in comments.
136		C++			No longer tries to open "." and "..".
137		C++			Really outputs pops in unowned provinces.
138		C++			New start date: December 12, 1835. Should allow politics to kick-start better.
139		C++			RGO pops start employed.
140		C++			Change log.
141		C++			Updating ReadMe.txt
142		C++			Parser now handles single-line top-level objects.
143		C++			Eliminated need for region.txt, pulls info from V2 install instead.
144		C++			Excluded unneeded files from the project (but keeping them in case they're useful later).
145		C++			Simplified dependencies.
146		C++			Province numbers and names come from V2 install.
147		C++			Cleaned up the output a bit.
148		C++			Fixed Capitals problem from change 146.
149		C++			Added logging during country mapping.
150		C++			RGO type from V2 install.
151		C++			Liferatings from V2 install.
152		C++			Removed unnecessary files from build.
153		C++			Get province names the right way.
154		C++			Changleog now included in build.
155		C++			Cleaned up old province name code.
156		C++			Cores!
157		C++			RGO and pops start with money.